Correct display on mobile

--- a/exercice2/css/style.css
+++ b/exercice2/css/style.css
@@ -1,3 +1,7 @@
+.row {
+  margin: 5px 0;
+}
+
 h1, p {
   margin: 5px;
 }
@@ -7,10 +11,10 @@ h1, p {
 }
 
 #img-now {
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   background-image: url('../img/nuage.svg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  background-position-y: -28px;
+  background-position-y: -10px;
 }
